--- a/laokou-service/laokou-auth/laokou-auth-start/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-start/pom.xml
@@ -116,7 +116,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
                 <configuration>
-                    <finalName>${parent.artifactId}</finalName>
+                    <finalName>${project.artifactId}</finalName>
                     <!-- main方法的地址 只需要修改这个地址-->
                     <mainClass>org.laokou.auth.AuthApp</mainClass>
                 </configuration>
