--- a/laokou-service/laokou-admin/laokou-admin-start/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-start/pom.xml
@@ -96,7 +96,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
                 <configuration>
-                    <finalName>${parent.artifactId}</finalName>
+                    <finalName>${project.artifactId}</finalName>
                     <!-- main方法的地址 只需要修改这个地址-->
                     <mainClass>org.laokou.admin.AdminApp</mainClass>
                 </configuration>
