--- a/doc/deploy/docker-compose.yml
+++ b/doc/deploy/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     container_name: laokou-register
     # 保持容器在没有守护程序的情况下运行
     tty: true
-    restart: on-failure
+    restart: always
     privileged: true
     ports:
       - "8848:8848"
@@ -32,7 +32,9 @@ services:
       - env/nacos.env
     extra_hosts:
       - "mysql.laokou.org:192.168.30.133"
-    network_mode: host
+    networks:
+      laokou-network:
+        ipv4_address: 172.10.1.2
   laokou-seata:
     image: registry.cn-shenzhen.aliyuncs.com/koushenhai/laokou-seata:3.1.5
     container_name: laokou-seata
@@ -47,12 +49,14 @@ services:
       - ./seata/logs:/opt
     extra_hosts:
       - "mysql.laokou.org:192.168.30.133"
-      - "nacos.laokou.org:127.0.0.1"
-    restart: on-failure
+      - "nacos.laokou.org:172.10.1.2"
+    restart: always
     privileged: true
-    network_mode: host
     depends_on:
       - laokou-register
+    networks:
+      laokou-network:
+        ipv4_address: 172.10.1.3
   laokou-gateway:
     image: registry.cn-shenzhen.aliyuncs.com/koushenhai/laokou-gateway:3.1.5
     container_name: laokou-gateway
@@ -65,11 +69,13 @@ services:
     volumes:
       - ./gateway/logs:/opt
     extra_hosts:
-      - "nacos.laokou.org:127.0.0.1"
+      - "nacos.laokou.org:172.10.1.2"
       - "kafka.laokou.org:192.168.209.1"
-    restart: on-failure
+    restart: always
     privileged: true
-    network_mode: host
+    networks:
+      laokou-network:
+        ipv4_address: 172.10.1.4
     depends_on:
       - laokou-register
   laokou-im:
@@ -84,13 +90,15 @@ services:
     volumes:
       - ./im/logs:/opt
     extra_hosts:
-      - "nacos.laokou.org:127.0.0.1"
+      - "nacos.laokou.org:172.10.1.2"
       - "kafka.laokou.org:192.168.209.1"
       - "redis.laokou.org:192.168.30.133"
       - "rocketmq.laokou.org:192.168.30.133"
-    restart: on-failure
+    restart: always
     privileged: true
-    network_mode: host
+    networks:
+      laokou-network:
+        ipv4_address: 172.10.1.5
     depends_on:
       - laokou-register
   laokou-auth:
@@ -105,13 +113,15 @@ services:
     volumes:
       - ./auth/logs:/opt
     extra_hosts:
-      - "nacos.laokou.org:127.0.0.1"
+      - "nacos.laokou.org:172.10.1.2"
       - "kafka.laokou.org:192.168.209.1"
       - "redis.laokou.org:192.168.30.133"
       - "mysql.laokou.org:192.168.30.133"
-    restart: on-failure
+    restart: always
     privileged: true
-    network_mode: host
+    networks:
+      laokou-network:
+        ipv4_address: 172.10.1.6
     depends_on:
       - laokou-register
   laokou-admin:
@@ -126,14 +136,16 @@ services:
     volumes:
       - ./admin/logs:/opt
     extra_hosts:
-      - "nacos.laokou.org:127.0.0.1"
+      - "nacos.laokou.org:172.10.1.2"
       - "kafka.laokou.org:192.168.209.1"
       - "redis.laokou.org:192.168.30.133"
       - "mysql.laokou.org:192.168.30.133"
       - "rocketmq.laokou.org:192.168.30.133"
-    restart: on-failure
+    restart: always
     privileged: true
-    network_mode: host
+    networks:
+      laokou-network:
+        ipv4_address: 172.10.1.7
     depends_on:
       - laokou-register
       - laokou-seata
@@ -149,13 +161,42 @@ services:
     volumes:
       - ./flowable/logs:/opt
     extra_hosts:
-      - "nacos.laokou.org:127.0.0.1"
+      - "nacos.laokou.org:172.10.1.2"
       - "kafka.laokou.org:192.168.209.1"
       - "redis.laokou.org:192.168.30.133"
       - "mysql.laokou.org:192.168.30.133"
-    restart: on-failure
+    restart: always
     privileged: true
-    network_mode: host
+    networks:
+      laokou-network:
+        ipv4_address: 172.10.1.8
     depends_on:
       - laokou-register
       - laokou-seata
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    # 保持容器在没有守护程序的情况下运行
+    tty: true
+    restart: always
+    privileged: true
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/dist:/usr/share/nginx/dist
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    extra_hosts:
+      - "vue.laokou.org:172.10.1.9"
+      - "gateway.laokou.org:172.10.1.4"
+    networks:
+      laokou-network:
+        ipv4_address: 172.10.1.9
+    depends_on:
+      - laokou-admin
+      - laokou-flowable
+networks:
+  laokou-network:
+    ipam:
+      config:
+        # 指定网段
+        - subnet: 172.10.1.0/24
