feat：docker-compose nginx配置ssl，处理wss协议

--- a/doc/deploy/conf/nginx.conf
+++ b/doc/deploy/conf/nginx.conf
@@ -27,8 +27,18 @@ http  {
 
     server  {
 
-        listen          80;
+        listen          443                                 ssl;
         server_name     vue.laokou.org;
+
+        ssl_certificate                                     /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key                                 /etc/nginx/ssl/key.pem;
+
+        ssl_session_timeout                                 5m;
+        ssl_session_cache                                   shared:SSL:10m;
+        ssl_protocols                                       TLSv1  TLSv1.1  TLSv1.2  SSLv2  SSLv3;
+        ssl_ciphers                                         ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
+        ssl_prefer_server_ciphers                           on;
+        ssl_verify_client                                   off;
 		add_header      Access-Control-Allow-Origin         *;
 		add_header      Access-Control-Allow-Credentials    true;
 		add_header      Access-Control-Allow-Methods        *;
@@ -53,7 +63,7 @@ http  {
             proxy_set_header        X-Forwarded-Proto       https;
             proxy_set_header        X-NginX-Proxy           true;
             proxy_set_header        Upgrade                 $http_upgrade;
-            proxy_set_header        Connection              "upgrade";
+            proxy_set_header        Connection              upgrade;
 		}
 
         error_page  500  502  503  504  /50x.html;
