feat：提交一键部署ppt

--- a/doc/deploy/nginx/conf/nginx.conf
+++ b/doc/deploy/nginx/conf/nginx.conf
@@ -54,6 +54,7 @@ http  {
 
 		location  /laokou/  {
             proxy_pass              https://gateway.laokou.org:5555/;
+            proxy_redirect          http://                 https://;
             proxy_connect_timeout   6000;
             proxy_read_timeout      6000;
             proxy_http_version      1.1;
