feat: docker-compose脚本 部署nacos，无法连接mysql，解决时区或数据库版本问题

--- a/doc/deploy/env/nacos.env
+++ b/doc/deploy/env/nacos.env
@@ -3,7 +3,7 @@ MYSQL_PORT=3306
 MYSQL_DB_NACOS=kcloud_platform_alibaba_nacos
 MYSQL_USERNAME=root
 MYSQL_PASSWORD=laokou123
-MYSQL_PARAM=characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=UTC
+MYSQL_PARAM=characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
 JASYPT_ENCRYPTOR_PASSWORD=5201314wumeihua
 TZ=Asia/Shanghai
 LANG=zh_CN.UTF-8
