--- a/laokou-cloud/laokou-register/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-register/src/main/resources/application.yml
@@ -22,10 +22,9 @@ jasypt:
 
 db:
   num: 1
-  url:
-    '0': jdbc:mysql://@MYSQL-HOST@:@MYSQL-PORT@/@MYSQL-DB-NACOS@?@MYSQL-PARAM@
-  user: @MYSQL-USERNAME@
-  password: @MYSQL-PASSWORD@
+  url.'0': jdbc:mysql://@MYSQL-HOST@:@MYSQL-PORT@/@MYSQL-DB-NACOS@?@MYSQL-PARAM@
+  user.'0': @MYSQL-USERNAME@
+  password.'0': @MYSQL-PASSWORD@
 management:
   metrics:
     export:
