--- a/doc/deploy/env/gateway.env
+++ b/doc/deploy/env/gateway.env
@@ -1,1 +1,1 @@
-JVM_OPTS="-Xmx512m -Xms512m -XX:+UseG1GC"
+JVM_OPTS="-Xmx512m -Xms512m -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=384m -XX:+UseG1GC"
