--- a/doc/deploy/env/nacos.env
+++ b/doc/deploy/env/nacos.env
@@ -7,5 +7,5 @@ MYSQL_PARAM=characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoRe
 JASYPT_ENCRYPTOR_PASSWORD=5201314wumeihua
 TZ=Asia/Shanghai
 LANG=zh_CN.UTF-8
-JVM_OPTS="-Xmx512m -Xms512m -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=384m -XX:+UseG1GC"
+JVM_OPTS="-Xmx512m -Xms512m -Xmn256m -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=384m -XX:+UseG1GC"
 NACOS_OPTS="-Dnacos.standalone=true"
