--- a/doc/deploy/env/seata.env
+++ b/doc/deploy/env/seata.env
@@ -5,4 +5,4 @@ SEATA_USERNAME=seata
 SEATA_PASSWORD=seata
 SEATA_LOG_PATH=/opt
 JASYPT_ENCRYPTOR_PASSWORD=5201314wumeihua
-JVM_OPTS="-Xmx512m -Xms512m -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=384m -XX:+UseG1GC"
+JVM_OPTS="-Xmx512m -Xms512m -Xmn256m -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=384m -XX:+UseG1GC"
