--- a/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
@@ -67,41 +67,43 @@ spring:
     oauth2:
       authorization-server:
         enabled: true
-        token:
-          authorization-code-time-to-live: 1h
-          access-token-time-to-live: 1h
-          refresh-token-time-to-live: 6h
         client:
-          require-authorization-consent: true
-        registration:
-          id: 95TxSsTPFA3tF12TBSMmUVK0da
-          client-id: 95TxSsTPFA3tF12TBSMmUVK0da
-          client-name: OAuth2.1认证
-          client-secret: "{bcrypt}$2a$10$BDcxgmL3WYk7G.QEDTqlBeSudNlV3KUU/V6iC.hKlAbGAC.jbX2fO"
-          client-authentication-methods:
-            - client_secret_basic
-          authorization-grant-types:
-            - password
-            - mail
-            - mobile
-            - client_credentials
-            - refresh_token
-            - authorization_code
-            - urn:ietf:params:oauth:grant-type:device_code
-            - urn:ietf:params:oauth:grant-type:jwt-bearer
-          scopes:
-            - password
-            - mail
-            - mobile
-            - openid
-          redirect-uris:
-            - http://127.0.0.1:8000
-            - http://127.0.0.1:8001
-          post-logout-redirect-uris:
-            - http://127.0.0.1:8000
-            - http://127.0.0.1:8001
+          default:
+            token:
+              authorization-code-time-to-live: 1h
+              access-token-time-to-live: 1h
+              refresh-token-time-to-live: 6h
+            registration:
+              id: 95TxSsTPFA3tF12TBSMmUVK0da
+              client-id: 95TxSsTPFA3tF12TBSMmUVK0da
+              client-name: OAuth2.1认证
+              client-secret: "{bcrypt}$2a$10$BDcxgmL3WYk7G.QEDTqlBeSudNlV3KUU/V6iC.hKlAbGAC.jbX2fO"
+              client-authentication-methods:
+                - client_secret_basic
+              authorization-grant-types:
+                - password
+                - mail
+                - mobile
+                - client_credentials
+                - refresh_token
+                - authorization_code
+                - urn:ietf:params:oauth:grant-type:device_code
+                - urn:ietf:params:oauth:grant-type:jwt-bearer
+              scopes:
+                - password
+                - mail
+                - mobile
+                - openid
+              redirect-uris:
+                - http://127.0.0.1:8000
+                - http://127.0.0.1:8001
+              post-logout-redirect-uris:
+                - http://127.0.0.1:8000
+                - http://127.0.0.1:8001
+            # 客户端请求访问时需要授权同意
+            require-authorization-consent: true
         request-matcher:
-          patterns:
+          ignore-patterns:
             - /v1/captchas/{uuid}
             - /v1/secrets
             - /v3/api-docs/**
