feat: http2配置，去掉gateway无用配置，提高吞吐

--- a/laokou-cloud/laokou-register/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-register/src/main/resources/application.yml
@@ -101,7 +101,7 @@ server:
     # 证书密码
     key-store-password: laokou
   http2:
-    enabled: true
+    enabled: false
 spring:
   application:
     name: @pom.artifactId@
