--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -30,8 +30,10 @@ server:
     key-store-type: PKCS12
     # 证书密码
     key-store-password: laokou
+    # 证书密码
+    key-password: laokou
   http2:
-    enabled: false
+    enabled: @SSL-ENABLED@
   forward-headers-strategy: native
 # spring
 spring:
