--- a/laokou-service/laokou-report/laokou-report-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-report/laokou-report-start/src/main/resources/application.yml
@@ -29,7 +29,7 @@ server:
     # 证书密码
     key-store-password: laokou
   http2:
-    enabled: true
+    enabled: @SSL-ENABLED@
   forward-headers-strategy: framework
 # spring
 spring:
