--- a/laokou-service/laokou-admin/laokou-admin-app/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-app/pom.xml
@@ -35,6 +35,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-security</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-data-cache</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
