feat: 升级版本至3.2.0 sb 升级至 3.2.0 sc 升级至 2023.0.0 sas升级至 1.2.0 jdk升级至 21

--- a/laokou-cloud/laokou-register/pom.xml
+++ b/laokou-cloud/laokou-register/pom.xml
@@ -131,7 +131,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot.version}</version>
+                <version>${spring-boot-maven-plugin.version}</version>
                 <configuration>
                     <finalName>${project.artifactId}</finalName>
                     <!-- main方法的地址 只需要修改这个地址-->
