--- a/pom.xml
+++ b/pom.xml
@@ -38,12 +38,13 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+        <spring-boot-maven-plugin.version>3.1.5</spring-boot-maven-plugin.version>
         <!--spring-boot版本-->
-        <spring-boot.version>3.2.0</spring-boot.version>
+        <spring-boot.version>3.2.0-RC2</spring-boot.version>
         <!--spring-cloud版本-->
-        <spring-cloud.version>2023.0.0</spring-cloud.version>
+        <spring-cloud.version>2023.0.0-RC1</spring-cloud.version>
         <!--spring-framework版本-->
-        <spring-framework.version>6.0.13</spring-framework.version>
+        <spring-framework.version>6.1.0</spring-framework.version>
         <!--cloud-alibaba版本-->
         <spring-cloud-alibaba.version>2022.0.0.0</spring-cloud-alibaba.version>
         <!--spring-doc版本-->
