--- a/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
@@ -89,6 +89,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-openfeign</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-dynamic-router</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
