--- a/pom.xml
+++ b/pom.xml
@@ -268,6 +268,7 @@
                 <artifactId>versions-maven-plugin</artifactId>
                 <version>${versions-maven-plugin.version}</version>
                 <configuration>
+                    <!--备份版本-->
                     <generateBackupPoms>true</generateBackupPoms>
                     <newVersion>3.2.1</newVersion>
                     <oldVersion>3.2.0</oldVersion>
