feat：根据域名回填租户

--- a/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
@@ -43,6 +43,10 @@ spring:
       - boot_sys_message_detail
       - boot_sys_oss
       - boot_sys_oss_log
+    domain-names:
+      - laokou.org
+      - laokouyun.org
+    tenant-prefix: "tenant"
   application:
     name: @pom.parent.artifactId@
   profiles:
