feat: 优雅停机代码提交

--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-start/src/main/resources/application.yml
@@ -30,6 +30,7 @@ server:
   http2:
     enabled: @SSL-ENABLED@
   forward-headers-strategy: framework
+  shutdown: graceful
 #spring
 spring:
   application:
