--- a/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
@@ -72,6 +72,7 @@ spring:
             - /v1/logouts
             - /v1/tenants/option-list
             - /v1/tenants/id
+            - /graceful-shutdown
   cloud:
     # sentinel
     sentinel:
