--- a/laokou-service/laokou-module/laokou-im/laokou-im-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-im/laokou-im-start/src/main/resources/application.yml
@@ -13,6 +13,7 @@ server:
     key-store-password: laokou
   http2:
     enabled: @SSL-ENABLED@
+  shutdown: graceful
 #spring
 spring:
   websocket:
