feat: 优雅停机代码提交

--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -34,6 +34,7 @@ server:
   http2:
     enabled: @SSL-ENABLED@
   forward-headers-strategy: native
+  shutdown: graceful
 # spring
 spring:
   application:
