feat: 1.优雅停机代码提交 2.使用sc2023 快照 3.增加快照的maven配置，以及修改relation相关配置 4.优化代码格式

--- a/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
@@ -48,6 +48,15 @@ spring:
       - laokou.org
       - laokouyun.org
     tenant-prefix: "tenant"
+    remove-params:
+      - "username"
+      - "password"
+      - "mobile"
+      - "mail"
+    graceful-shutdown-services:
+      - "laokou-flowable"
+      - "laokou-admin"
+      - "laokou-auth"
   application:
     name: @pom.parent.artifactId@
   profiles:
@@ -72,7 +81,6 @@ spring:
             - /v1/logouts
             - /v1/tenants/option-list
             - /v1/tenants/id
-            - /graceful-shutdown
   cloud:
     # sentinel
     sentinel:
