--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         <!--spring-boot版本-->
         <spring-boot.version>3.2.0</spring-boot.version>
         <!--spring-cloud版本-->
-        <spring-cloud.version>2023.0.0-SNAPSHOT</spring-cloud.version>
+        <spring-cloud.version>2023.0.0</spring-cloud.version>
         <!--spring-framework版本-->
         <spring-framework.version>6.1.1</spring-framework.version>
         <!--cloud-alibaba版本-->
