--- a/laokou-service/laokou-admin/laokou-admin-app/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-app/pom.xml
@@ -20,6 +20,10 @@
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-lock</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
